fix spacings

--- a/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
+++ b/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
@@ -6,7 +6,7 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 24px;
+  margin: 0 0 35px;
 }
 
 .subheading {
@@ -18,11 +18,12 @@
 .items {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 21px 24px;
   background: #F2F2F2;
   align-self: stretch;
-  grid-gap: 21px 24px;
   padding: 16px 20px;
   margin: 0;
+  columns: 2;
 }
 
 .item {
@@ -35,6 +36,7 @@
 
 .item > span {
   font-family: 'Bitter', monospace;
+  font-weight: bold;
 }
 
 .word {
@@ -43,6 +45,8 @@
 }
 
 .item::marker {
+  font-family: 'Bitter', monospace;
+  font-weight: bold;
   display: inline-block;
   font-size: 1.125rem;
   width: 1.875rem;
@@ -58,7 +62,7 @@
   width: 18rem;
   display: flex;
   justify-content: space-between;
-  margin-top: 1.25rem;
+  margin-top: 40px;
 }
 
 .create {
